--- a/packages/app-web/src/app/elements/code-editor/code-editor.component.html
+++ b/packages/app-web/src/app/elements/code-editor/code-editor.component.html
@@ -8,19 +8,24 @@
 >
   <ion-toolbar *ngIf="controls">
     <ion-buttons>
-      <ion-button title="Bold">B</ion-button>
-      <ion-button title="Italic">I</ion-button>
-      <ion-button title="Heading">H</ion-button>
-      <ion-button title="List">
+      <ion-button title="Bold" *ngIf="isEnabled('bold')">B</ion-button>
+      <ion-button title="Italic" *ngIf="isEnabled('italic')">I</ion-button>
+      <ion-button title="Heading" *ngIf="isEnabled('header')">H</ion-button>
+      <ion-button title="List" *ngIf="isEnabled('list')">
         <ion-icon name="list-outline"></ion-icon>
       </ion-button>
-      <ion-button title="Link">
+      <ion-button title="Link" *ngIf="isEnabled('link')">
         <ion-icon name="link-outline"></ion-icon>
       </ion-button>
-      <ion-button title="Attachment">
+      <ion-button title="Attachment" *ngIf="isEnabled('attachment')">
         <ion-icon name="attach-outline"></ion-icon>
       </ion-button>
     </ion-buttons>
+    <ion-select *ngIf="isEnabled('code')">
+      <ion-select-option>HTML</ion-select-option>
+      <ion-select-option>Text</ion-select-option>
+      <ion-select-option>Markdown</ion-select-option>
+    </ion-select>
   </ion-toolbar>
   <div
     #editor
