--- a/packages/app-web/src/app/components/login-button/login-button.component.html
+++ b/packages/app-web/src/app/components/login-button/login-button.component.html
@@ -33,14 +33,14 @@
         <!--          <ion-icon name="key-outline" slot="start"></ion-icon>-->
         <!--          Secrets-->
         <!--        </ion-item>-->
-        <ion-item
-          [button]="true"
-          routerLink="/orders"
-          *ngIf="serverConfig.isSaas()"
-        >
-          <ion-icon name="card-outline" slot="start"></ion-icon>
-          Billings
-        </ion-item>
+<!--        <ion-item-->
+<!--          [button]="true"-->
+<!--          routerLink="/orders"-->
+<!--          *ngIf="serverConfig.isSaas()"-->
+<!--        >-->
+<!--          <ion-icon name="card-outline" slot="start"></ion-icon>-->
+<!--          Billings-->
+<!--        </ion-item>-->
         <ion-item
           [button]="true"
           routerLink="/settings"
