--- a/packages/app-web/src/app/pages/profile/profile.page.html
+++ b/packages/app-web/src/app/pages/profile/profile.page.html
@@ -49,6 +49,34 @@
           ></ion-input>
         </ion-col>
       </ion-row>
+      <ion-row *ngIf="serverConfig.isSaas()">
+        <ion-col push="3" size="9">
+          <ion-label color="warning" *ngIf="!formFg.value.emailVerified">Email not verified</ion-label>
+          <ion-label color="success" *ngIf="formFg.value.emailVerified">Email verified</ion-label>
+        </ion-col>
+      </ion-row>
+      <ion-row *ngIf="serverConfig.isSaas()">
+        <ion-col size="3">
+          <ion-label class="ion-padding">Country</ion-label>
+        </ion-col>
+        <ion-col size="9">
+          <ion-input
+            aria-label="Country"
+            placeholder="Your country of residence"
+            [formControl]="formFg.controls.country"
+            fill="outline"
+          ></ion-input>
+        </ion-col>
+      </ion-row>
+      <ion-row>
+        <ion-col size="3">
+<!--          <ion-label class="ion-padding">Email</ion-label>-->
+        </ion-col>
+        <ion-col size="9">
+          <ion-button (click)="saveProfile()"
+                      [disabled]="!(formFg.valid && formFg.dirty)">Save</ion-button>
+        </ion-col>
+      </ion-row>
     </ion-list>
 
     <ng-container *ngIf="serverConfig.isSaas()">
