--- a/packages/app-web/src/app/products/feedless/feedless-product.page.html
+++ b/packages/app-web/src/app/products/feedless/feedless-product.page.html
@@ -1,4 +1,14 @@
 <ion-header [translucent]="true">
+  <ion-toolbar color="danger"
+               style="padding-right: 5px; padding-left: 5px;"
+               *ngIf="session?.user?.purgeScheduledFor">
+    <ion-label>
+      This account is scheduled to be deleted in {{fromNow(session.user?.purgeScheduledFor)}}
+    </ion-label>
+    <ion-button slot="end" color="dark" (click)="cancelAccountDeletion()">
+      Cancel Deletion
+    </ion-button>
+  </ion-toolbar>
   <ion-toolbar>
     <ion-buttons slot="start">
       <ion-menu-button></ion-menu-button>
