--- a/packages/app-web/src/app/pages/profile/profile.page.html
+++ b/packages/app-web/src/app/pages/profile/profile.page.html
@@ -51,8 +51,12 @@
       </ion-row>
       <ion-row *ngIf="serverConfig.isSaas()">
         <ion-col push="3" size="9">
-          <ion-label color="warning" *ngIf="!formFg.value.emailVerified">Email not verified</ion-label>
-          <ion-label color="success" *ngIf="formFg.value.emailVerified">Email verified</ion-label>
+          <ion-label color="warning" *ngIf="!formFg.value.emailVerified"
+            >Email not verified</ion-label
+          >
+          <ion-label color="success" *ngIf="formFg.value.emailVerified"
+            >Email verified</ion-label
+          >
         </ion-col>
       </ion-row>
       <ion-row *ngIf="serverConfig.isSaas()">
@@ -70,11 +74,14 @@
       </ion-row>
       <ion-row>
         <ion-col size="3">
-<!--          <ion-label class="ion-padding">Email</ion-label>-->
+          <!--          <ion-label class="ion-padding">Email</ion-label>-->
         </ion-col>
         <ion-col size="9">
-          <ion-button (click)="saveProfile()"
-                      [disabled]="!(formFg.valid && formFg.dirty)">Save</ion-button>
+          <ion-button
+            (click)="saveProfile()"
+            [disabled]="!(formFg.valid && formFg.dirty)"
+            >Save</ion-button
+          >
         </ion-col>
       </ion-row>
     </ion-list>
